# Interview_Cases

./: README.md
RAII/copy/: CMakeLists.txt  deep_string.cpp  deep_string.h  main.cpp  shallow_string.cpp  shallow_string.h
RAII/test_35Principles/: CMakeLists.txt  FiveRuleClass.cpp  FiveRuleClass.h  ThreeRuleClass.cpp  ThreeRuleClass.h  ThreeRuleCounterExample.cpp  ZeroRuleClass.cpp  ZeroRuleClass.h  main.cpp
